--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -31,10 +31,9 @@ layout: default
       <div class="section-content">
       I am Yaoda Zhou. I am a Ph.D candidate in Programming Language Group of the University of Hong Kong,
       supervised by Prof. Bruno C. d. S. Oliveira.
-      My research topics range over type system and type theory. 
-      More precisely, I propose new designs and implements of iso-recursive subtyping.
-      I am a multilinguist. You can talk with me in Mandarin Chinese (mother tongue), Cantonese Chinese (mother tongue) and English (professional). <br> 
-      <b>I am looking for an industry job based on Hong Kong or remotely, if you are interested please feel free to contact me.</b>
+      My research topics range over type system and type theory in terms of Object-Oriented Programming (OOP). 
+      More precisely, I propose new designs and implements of iso-recursive subtyping and study its extension.
+      I am a multilinguist. You can talk with me in Mandarin Chinese (mother tongue), Cantonese Chinese (mother tongue) and English (professional). 
       </div>
       </section>
 
