--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -100,7 +100,7 @@ layout: default
               {{ pub.supervisor }}
             </div>
             <div class="block-content">
-              {{ pub.commitee }}
+              {{ pub.committee }}
             </div>
           </div>
           {% endfor %}
