update thesis infor

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -83,16 +83,11 @@ layout: default
             {% endif %}
             <div class="block-material">
               <a href="{{ pub.link }}">
-              <i class="fa fa-file-pdf-o aria-hidden="true></i> Paper
+              <i class="fa fa-file-pdf-o aria-hidden="true></i> Thesis
               </a>
               {% if pub.artifact %}
               <a class="a-materail" href="{{ pub.artifact }}">
               <i class="fa fa-file-code-o aria-hidden="true></i> Artifact
-              </a>
-              {% endif %}
-              {% if pub.video %}
-              <a class="a-materail" href="{{ pub.video }}">
-              <i class="fa fa-youtube aria-hidden="true></i> Video
               </a>
               {% endif %}
             </div>
